# kistaverk

./: .gitignore  AGENTS.md  ANDROID_GMP_SOLUTION.md  ARCHITECTURE.md  CONTRIBUTING.md  DT_INIT_EXPLANATION.md  EXECUTIVE_MEMO_FUNCTION_ANALYSIS.md  GMP_SETUP_GUIDE.md  GMP_SOLUTION_SUMMARY.md  I18N_EXTENSION_PLAN.md  LICENSE  METHODOLOGY.md  OPTIMIZATION_REPORT.md  README.md  REMEDIATION_PLAN.md  TASKINPROGRESS.md  TIGER_STYLE.md  UPX_COMPRESSION_ANALYSIS.md  UPX_FINAL_IMPLEMENTATION.md  UPX_IMPLEMENTATION_GUIDE.md  UPX_IMPLEMENTATION_PLAN.md  UPX_WORKAROUND_SOLUTION.md  VISION.md  WORKINPROGRESS.md  dummy_init.c  init.c  manual_init_experiment.sh  test_init_function.c
app/: ANDROID_PRECISION_README.md  CMakeLists.txt  settings.gradle.kts
app/app/: build.gradle.kts
app/app/src/androidTest/java/aeska/kistaverk/: ExampleInstrumentedTest.kt
app/app/src/main/: AndroidManifest.xml
app/app/src/main/assets/: deps.json
app/app/src/main/assets/prism/: PRISM_LICENSE.txt  prism-bundle.min.js
app/app/src/main/java/aeska/kistaverk/: CameraManager.kt  MainActivity.kt  SensorLoggerService.kt  SensorManager.kt  UIRenderer.kt
app/app/src/main/java/aeska/kistaverk/features/: KotlinImageConversion.kt
app/app/src/main/res/drawable/: ic_launcher_pdfsign_foreground.xml
app/app/src/main/res/mipmap-anydpi-v26/: ic_launcher_pdfsign.xml
app/app/src/main/res/values/: ic_launcher_background.xml  ids.xml  strings.xml  themes.xml
app/app/src/main/res/values-night/: themes.xml
app/app/src/main/res/xml/: file_paths.xml
app/app/src/test/java/aeska/kistaverk/: ExampleUnitTest.kt  MainActivityClipboardTest.kt  MainActivityMimeTest.kt  MainActivitySnapshotTest.kt  MainActivityTextViewerPickerTest.kt  ShadowMainActivity.kt  ShadowSystemLoadLibrary.kt  TestViews.kt  UiRendererBackButtonTest.kt  UiRendererButtonValidationTest.kt  UiRendererCheckboxTest.kt  UiRendererCodeViewTest.kt  UiRendererDepsListTest.kt  UiRendererGridTest.kt  UiRendererMalformedJsonTest.kt  UiRendererPdfPickerValidationTest.kt  UiRendererPdfPreviewTest.kt  UiRendererPdfSignPlacementTest.kt  UiRendererProgressTest.kt  UiRendererSectionCardTest.kt  UiRendererSensorBindingsTest.kt  UiRendererTextInputTest.kt  UiRendererValidationTest.kt
app/gradle/: libs.versions.toml
app/gradle/wrapper/: gradle-wrapper.properties
app/src/main/cpp/: native-bridge.cpp  native-bridge.h
app/src/main/java/com/kistaverk/: FunctionAnalysisActivity.kt  FunctionAnalysisViewModel.kt  StabilityTestAdapter.kt
app/src/main/java/com/kistaverk/visualization/: PlotView.kt
app/src/main/res/layout/: activity_function_analysis.xml  item_stability_test.xml
app/src/main/res/values/: function_analysis_strings.xml
docs/: README.md
docs/architecture/: cas-design.md  mir-integration.md  overview.md
docs/development/android/: build-guide.md  precision-setup.md  troubleshooting.md
docs/features/: ADVANCED_CAS.md  ADVANCED_CAS_PLAN.md  ANDROID_PRECISION_README.md  ARM64_OPTIMIZATIONS.md  BUILD_RS_DOCUMENTATION.md  C_SCRIPTING.md
docs/features/math-tool/: advanced-cas-plan.md  advanced-cas.md  overview.md  precision.md  symbolic.md
docs/features/mir-scripting/: examples.md  integration.md  overview.md
docs/features/synthesizer/: overview.md
docs/meta/: ARCHITECTURE.md  DSL.md  PRIVACY.md  VISION.md
docs/reference/: cas-api.md  mir-api.md
docs/roadmap/: AUTOMATIC_DIFFERENTIATION_SUMMARY.md  FINAL_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  MIR_ADVANCED_FEATURES_IMPLEMENTATION_PLAN.md  UI_IMPLEMENTATION_GUIDE.md  UI_INTEGRATION_PLAN.md  VISUALIZATION_SUMMARY.md
rust/: Cargo.toml  build.rs
rust/.cargo/: config.toml  config.toml.broken
rust/benches/: number_performance.rs
rust/locales/: de.yml  en.yml  es.yml  fr.yml  is.yml  la.yml  pt.yml  zh.yml
rust/scripts/: generate_deps_metadata.sh
rust/src/: i18n.rs  lib.rs  mir_tests.rs  router.rs  state.rs  ui.rs  ui_tests.rs
rust/src/features/: archive.rs  automatic_differentiation.rs  c_based_ad.rs  c_scripting.rs  cas_types.rs  color_tools.rs  compression.rs  dependencies.rs  dithering.rs  file_info.rs  function_analysis.rs  hashes.rs  hex_editor.rs  jwt.rs  kotlin_image.rs  logic.rs  math_tool.rs  math_tool_test.rs  mir_math.rs  mir_scripting.rs  misc_screens.rs  mod.rs  pdf.rs  performance_analysis.rs  pixel_art.rs  plotting.rs  presets.rs  qr.rs  qr_transfer.rs  regex_tester.rs  scheduler.rs  scripting.rs  sensor_logger.rs  sensor_utils.rs  sql_engine.rs  storage.rs  synthesizer.rs  system_info.rs  text_tools.rs  text_viewer.rs  (+4 more)
scripts/: ANDROID_BUILD_README.md  ANDROID_PRECISION_GUIDE.md  build_gmp_android.sh  build_release.sh  compress_libraries.sh  setup_android_ndk.sh  setup_gmp.sh  setup_gmp_libraries.sh  size_report.sh  test_android_linking.sh  test_build_script.sh  use_android_config.sh
