[package]
name = "kistaverk_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "kistaverk_core"  # Optionnel mais recommandé pour forcer le nom du .so
crate-type = ["cdylib"]

[dependencies]
jni = "0.21"           # The bridge
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = { version = "0.10", default-features = false, features = ["std"] }
sha1 = { version = "0.10", default-features = false, features = ["std"] }
md5 = { package = "md-5", version = "0.10", default-features = false, features = ["std"] }
md4 = { version = "0.10", default-features = false, features = ["std"] }
crc32fast = "1"
blake3 = { version = "1", default-features = false, features = ["std"] }
infer = "0.15"
qrcode = { version = "0.14", default-features = false, features = ["image"] }
image = { version = "0.24", default-features = false, features = ["png"] }
base64 = { version = "0.21", default-features = false, features = ["std"] }
lopdf = "0.32"
memmap2 = "0.9"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
time = { version = "0.3", default-features = false, features = ["formatting", "macros", "std"] }
tempfile = "3"

[target.'cfg(target_os = "android")'.dependencies]
android_log-sys = "0.3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.dev]
panic = "unwind"
