[package]
name = "kistaverk_core"
version = "0.0.1"
edition = "2021"
license = "AGPL-3.0-or-later"

[lib]
name = "kistaverk_core"  # Optionnel mais recommandé pour forcer le nom du .so
crate-type = ["cdylib"]

[dependencies]
jni = "0.21"           # The bridge
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust-i18n = "3"
sha2 = { version = "0.10", default-features = false, features = ["std"] }
sha1 = { version = "0.10", default-features = false, features = ["std"] }
md5 = { package = "md-5", version = "0.10", default-features = false, features = ["std"] }
md4 = { version = "0.10", default-features = false, features = ["std"] }
crc32fast = "1"
blake3 = { version = "1", default-features = false, features = ["std"] }
infer = "0.15"
qrcode = { version = "0.14", default-features = false, features = ["image"] }
image = { version = "0.24", default-features = false, features = ["png", "jpeg", "webp"] }
base64 = { version = "0.21", default-features = false, features = ["std"] }
lopdf = "0.32"
memmap2 = "0.9"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
time = { version = "0.3", default-features = false, features = ["formatting", "macros", "std"] }
tempfile = "3"
regex = { version = "1", default-features = false, features = ["std"] }
uuid = { version = "1", features = ["v4", "fast-rng"], default-features = false }
rand = { version = "0.8", default-features = false, features = ["std", "std_rng"] }
flate2 = { version = "1.0", default-features = false, features = ["zlib"] }
rxing = { version = "0.8.2", default-features = false, features = ["image", "client_support"] }
age = "0.10"
csv = "1"
poloto = "19"
sqlite = { version = "0.37.0", features = ["bundled"] }
cron = "0.12"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

mir-sys = { path = "../../mir-sys" } # Local dependency


[features]
precision = ["dep:rug", "dep:gmp-mpfr-sys"]

[target.'cfg(target_os = "android")'.dependencies]
rug = { version = "1.24", optional = true }
gmp-mpfr-sys = { version = "1.6", features = ["force-cross"], optional = true }
android_log-sys = "0.3"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.dev]
panic = "unwind"

[profile.android-debug]
inherits = "dev"
opt-level = 1
debug = 0
strip = "symbols"

[profile.android-release-size]
inherits = "release"
# Keep enough debug info for bloaty/attribution.
debug = 1
strip = "none"

[dev-dependencies]
criterion = "0.5"
libc = "0.2"

[[bench]]
name = "number_performance"
harness = false
